feat: properly separate client and server