@@ -7,6 +7,9 @@ import com.google.gson.JsonPrimitive;
 import lombok.Getter;
 import lombok.Setter;
 import net.minecraft.ChatFormatting;
+import net.minecraft.network.RegistryFriendlyByteBuf;
+import net.minecraft.network.codec.ByteBufCodecs;
+import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.world.scores.TeamColor;
 import org.apache.commons.lang3.StringUtils;
 
@@ -16,31 +19,43 @@ import java.util.List;
 import java.util.UUID;
 
 public class LockoutTeam {
-
-    private final List<String> players;
+    @Getter
+    private final List<String> playerNames;
     @Getter
     private final List<UUID> playerIds;
     @Getter
     private final TeamColor color;
     @Getter
     @Setter
-    private int points = 0;
-    @Getter
-    @Setter
     private boolean forfeited = false;
+
+    public static StreamCodec<RegistryFriendlyByteBuf, LockoutTeam> CODEC = StreamCodec.composite(
+            ByteBufCodecs.PLAYER_NAME.apply(ByteBufCodecs.list()),
+            LockoutTeam::getPlayerNames,
+            ByteBufCodecs.STRING_UTF8.map(UUID::fromString, UUID::toString).apply(ByteBufCodecs.list()),
+            LockoutTeam::getPlayerIds,
+            TeamColor.STREAM_CODEC,
+            LockoutTeam::getColor,
+            ByteBufCodecs.BOOL,
+            LockoutTeam::isForfeited,
+            LockoutTeam::new
+    );
 
     public LockoutTeam(List<String> playerNames, TeamColor formattingColor) {
         this(playerNames, new ArrayList<>(), formattingColor);
     }
 
     public LockoutTeam(List<String> playerNames, List<UUID> playerIds, TeamColor formattingColor) {
-        this.players = playerNames;
+        this.playerNames = playerNames;
         this.playerIds = playerIds;
         this.color = formattingColor;
     }
 
-    public List<String> getPlayerNames() {
-        return players;
+    public LockoutTeam(List<String> playerNames, List<UUID> playerIds, TeamColor color, boolean forfeited) {
+        this.playerNames = playerNames;
+        this.playerIds = playerIds;
+        this.color = color;
+        this.forfeited = forfeited;
     }
 
     public boolean containsPlayer(UUID uuid) {
@@ -48,15 +63,8 @@ public class LockoutTeam {
     }
 
     public String getDisplayName() {
-        String name = players.size() == 1 ? players.get(0) : "Team " + formattingToString(color);
+        String name = playerNames.size() == 1 ? playerNames.getFirst() : "Team " + formattingToString(color);
         return forfeited ? name + " (Forfeited)" : name;
-    }
-
-    public void addPoint() {
-        this.points++;
-    }
-    public void takePoint() {
-        this.points--;
     }
 
     public ChatFormatting getChatFormatting() {
@@ -70,13 +78,12 @@ public class LockoutTeam {
     public JsonElement serialize() {
         JsonObject object = new JsonObject();
         JsonArray playerNames = new JsonArray();
-        players.forEach(p -> playerNames.add(new JsonPrimitive(p)));
+        this.playerNames.forEach(p -> playerNames.add(new JsonPrimitive(p)));
         object.add("playerNames", playerNames);
         JsonArray playerIdData = new JsonArray();
         playerIds.forEach(p -> playerIdData.add(new JsonPrimitive(p.toString())));
         object.add("playerIds", playerIdData);
         object.add("color", new JsonPrimitive(color.getSerializedName()));
-        object.add("points", new JsonPrimitive(points));
         object.add("forfeited", new JsonPrimitive(forfeited));
         return object;
     }
@@ -106,10 +113,6 @@ public class LockoutTeam {
         TeamColor color = TeamColor.byName(colorData.getAsString());
 
         LockoutTeam team = new LockoutTeam(playerNames, playerIds, color);
-
-        JsonElement points = data.get("points");
-        if(points == null || !points.isJsonPrimitive() || !points.getAsJsonPrimitive().isNumber()) throw new IOException("Team data does not contain valid points.");
-        team.setPoints(points.getAsInt());
 
         JsonElement forfeited = data.get("forfeited");
         if(forfeited == null || !forfeited.isJsonPrimitive() || !forfeited.getAsJsonPrimitive().isBoolean()) throw new IOException("Team data does not contain valid forfeited.");
